--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ clock
   width: 300px;
   height: 300px;
   overflow: hidden;
-  background: rgba(255, 255, 255, 1);
+  background: #fff;
   border: 5px solid #333;
   border-radius: 50%;
 }
@@ -55,8 +55,8 @@ clock
   bottom: 50%;
   left: 50%;
   transform: translate(-50%, 50%);
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
   background-color: orangered;
   border-radius: 50%;
 }
@@ -66,10 +66,11 @@ clock
   bottom: 50%;
   left: 50%;
   transform: translate(-50%, 50%);
-  width: 12px;
-  height: 12px;
+  width: 16px;
+  height: 16px;
   background-color: #333;
   border-radius: 50%;
+  z-index: 11;
 }
 
 /*
@@ -91,7 +92,7 @@ number
 .num::after {
   content: "";
   position: absolute;
-  top: 0;
+  top: -1px;
   left: 50%;
   transform: translateX(-50%);
   width: 3px;
@@ -174,27 +175,36 @@ hand
 */
 .hand {
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
+
+.hand div {
+  position: absolute;
   bottom: 50%;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #333;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .second {
   width: 2px;
   height: 40%;
   background-color: orangered;
-  border-radius: 2px;
 }
 .minute {
-  width: 3px;
+  width: 5px;
   height: 32%;
-  border-radius: 3px;
+  background-color: #333;
 }
 .hour {
-  width: 5px;
+  width: 8px;
   height: 24%;
-  border-radius: 5px;
+  background-color: #333;
 }
 
 /*
@@ -206,6 +216,7 @@ responsive
   .clock {
     width: 500px;
     height: 500px;
+    border-width: 10px;
   }
   .num {
     font-size: 2rem;
